# Vulkan-Chickengine

./: CMakeLists.txt
shaders/: CompileShaders.bat  baseMesh.slang  baseMesh.spv  baseMeshShader.slang  baseMeshShader.spv  coloredTriangle.slang  coloredTriangle.spv  colored_triangle.frag  colored_triangle.frag.spv  colored_triangle.vert  default_lit.frag  default_lit.frag.spv  pbr.slang  pbr.spv  textureLit.slang  textureLit.spv  triangle.frag  triangle.frag.spv  triangle.slang  triangle.spv  triangle.vert  triangle_mesh.vert  triangle_mesh.vert.spv
shaders/legacyGLSL/: Texture_lit.frag  Texture_lit.frag.spv  default_lit.frag  default_lit.frag.spv  triangle_mesh.vert  triangle_mesh.vert.spv
src/: CMakeLists.txt  camera.cpp  camera.h  renderable.cpp  renderable.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_mesh.cpp  vk_mesh.h  vk_pipelines.cpp  vk_pipelines.h  vk_texture.cpp  vk_texture.h  vk_types.h  vk_utils.cpp  vk_utils.h
